finished changes for the tablet now making changes for the mobile version

--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
   <div class="container">
     <section class="nav-bar">
       <div class="nav-a">
-        <nav>
-            <a href="#">Services</a>
-            <a href="#">Product</a>
-            <a href="#">Vision</a>
-            <a href="#">Features</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>    
+        <nav class="box">
+          <div class="inside-box">
+           <div><a href="#">Services</a></div> 
+           <div><a href="#">Product</a></div> 
+           <div><a href="#">Vision</a></div> 
+           <div><a href="#">Features</a></div> 
+           <div><a href="#">About</a></div> 
+           <div><a href="#">Contact</a></div> 
+          </div> 
+           <div class=img-bar>
+              <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+          </div>  
         </nav>
-        <img class="img-bar" src="img/logo.png" alt="Great Idea! Company logo.">
+      
       </div>
-      <!-- <div class=img-bar>
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-    </div> -->
     </section>
     <section class="sec">
      <div class="please-work">
